istio-helm-on-eks-guide/traffic-routing/virtualservice-canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-canary
  namespace: istio-sample
spec:
  hosts:
    - "*"
  gateways:
    - httpbin-gateway
  http:
    - route:
        - destination:
            host: httpbin
            subset: v1
            port:
              number: 8000
          weight: 90
        - destination:
            host: httpbin
            subset: v2
            port:
              number: 8000
          weight: 10
